# ExoplanetCrossmatcher

./: .gitignore  README.md  class_testing_sandbox.ipynb  coordinate_crossmatching.ipynb  cross_match_with_NEA.py  crossmatching.py  crossmatching_3d.py  crossmatching_function.py  crossmatching_sandbox.ipynb  database_access_test.ipynb  demo.ipynb  demo2.ipynb  download_data.py  enrichment_diagram.mmd  exomerkat.ipynb  id_crossmatching.ipynb  life_td_test.ipynb  method_comparison.ipynb  nea_pscomppars_inquiries.ipynb  pytest.ini  requirements.txt  setup_lifetd.bat  update_enrich_calls.py
.trash/: getting-started.md
crossmatching/: __init__.py  config.py  crossmatcher.py  crossmatching.cfg  enrichment.py  pyproject.toml
crossmatching/catalogs/: base.py  exomercat.py  file.py  nea.py
crossmatching/enrichment/: __init__.py  inference.py  masks.py  merger.py  radius_estimation.py  schema.py  spectral_types.py
crossmatching/enrichment/param_sources/: __init__.py  base.py  epic.py  eu.py  hpic.py  nea.py  simbad.py  toi.py
crossmatching/id_suppliers/: base.py  emc.py  simbad.py
crossmatching/param_sources/: __init__.py  base.py  epic.py  hpic.py  nea.py  simbad.py  toi.py
docs/: architecture.md  catalogs.md  column-reference.md  configuration.md  crossmatching.md  derived-parameter-inference.md  detect-duplicates.md  enrichment.md  id-suppliers.md  index.md  testing.md
input/: HPIC_LC4_combined_d50.txt  simbad_params.txt
notebooks/: angular_seps.ipynb  catalog_supplier_comparison.ipynb  class_testing_sandbox.ipynb  companion_mismatch.ipynb  crossmatching_3d.py  (+28 more)
(+83 files in other folders)
